k8s/10-eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: proctoring-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: proctoring-platform/eureka-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8761 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8761 }
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 384Mi }
            limits: { cpu: 750m, memory: 768Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: proctoring-platform
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
