k8s/11-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: proctoring-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: proctoring-platform/config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8888 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8888 }
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 384Mi }
            limits: { cpu: 750m, memory: 768Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: proctoring-platform
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
