k8s/20-identity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: proctoring-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: proctoring-platform/identity-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { cpu: 1, memory: 1Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: proctoring-platform
spec:
  selector:
    app: identity-service
  ports:
    - port: 8081
      targetPort: 8081
