k8s/21-exam-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-service
  namespace: proctoring-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: exam-service
  template:
    metadata:
      labels:
        app: exam-service
    spec:
      containers:
        - name: exam-service
          image: proctoring-platform/exam-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { cpu: 1, memory: 1Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: exam-service
  namespace: proctoring-platform
spec:
  selector:
    app: exam-service
  ports:
    - port: 8082
      targetPort: 8082
