k8s/22-attempt-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attempt-service
  namespace: proctoring-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: attempt-service
  template:
    metadata:
      labels:
        app: attempt-service
    spec:
      containers:
        - name: attempt-service
          image: proctoring-platform/attempt-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { cpu: 1, memory: 1Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: attempt-service
  namespace: proctoring-platform
spec:
  selector:
    app: attempt-service
  ports:
    - port: 8083
      targetPort: 8083
