k8s/25-result-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-service
  namespace: proctoring-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result-service
  template:
    metadata:
      labels:
        app: result-service
    spec:
      containers:
        - name: result-service
          image: proctoring-platform/result-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8086 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8086 }
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { cpu: 1, memory: 1Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: proctoring-platform
spec:
  selector:
    app: result-service
  ports:
    - port: 8086
      targetPort: 8086
